--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,15 @@
 :root{
     --navbar-height: 50px;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 /* navigation bar */
 #navbar{
     display: flex;
     align-items: center;
-    position: relative;
+    position: sticky;
     top: 0px;
 }
 
@@ -22,7 +25,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 100%;
+    height: 60%;
     width: 100%;
     z-index: -1;
     opacity: 0.4;
@@ -33,7 +36,7 @@
 }
 #logo img{
     margin: 4px 8px;
-    height: 70px;
+    height: 65px;
 
 }
 
@@ -63,9 +66,9 @@
 /* Home section */
 #home{
     display: flex;
-    
     flex-direction: column;
-    height: 450px;
+    height: 800px;
+    /* width: 100%; */
     padding: 3px 200px;
     justify-content: center;
     align-items: center;
@@ -74,9 +77,9 @@
     content: "";
     position: absolute;
     background: url('../img/image1.jpg') no-repeat center center/cover;
-    top: 0px;
+    top: -20px;
     left: 0px;
-    height: 50%;
+    height: 70%;
     width: 100%;
     z-index: -1;
     opacity: 0.89;
@@ -93,8 +96,8 @@
     font-size: 1.5rem;
 }
 /* services section */
-#services {
-    margin: 60px;
+#services{
+    margin: 52px;
     display: flex;
     
 }
@@ -102,14 +105,14 @@
     border: 2px solid brown;
     margin: auto;
     background-color: white;
-    padding: 60px;
+    padding: 40px;
     margin: 3px 6px;
     border-radius: 28px;
     background: grey;
     
 }
 #services .box img{
-    height: 130px;
+    height: 100px;
     margin: auto;
     display: block;
     
@@ -124,7 +127,8 @@
 /* clients section */
 #client-section{
     position: relative;
-    height: 250px;
+    top: -20px;
+
 
 }
 #client-section::before{
@@ -140,44 +144,55 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .client-item{
-    padding: 36px;
+    padding: 60px;
 }
 
 #clients img{
-    height: 80px;
+    height: 124px;
 }
-   /* contact-box */
+   /* contact section */
 #contact{
     position: relative;
+    /* top: 96px; */
+
 }
 #contact::before{
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 100px;
     z-index: -1;
     opacity: 0.7;
     background: url('..contact.jpg') no-repeat center center/cover;
  }
-contact-box{
+#contact-box{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 34px;
-}
+    padding-bottom: 36px;
+    
+}  
  #contact-box input,
- #contact-box textarea,{
+ #contact-box textarea{
     width: 100%;
-    padding: 0.5em;
+    padding: 0.4em;
+    border-radius: 9px;
+    font-size: 1.1rem;
+ }
+ #contact-box form{
+    width: 700px;
+ }
+  #contact-box label{
+    font-size: 1rem;
  }
 
  footer{
     background: black;
     color: white;
-    padding: 9px 20px;
+    padding: 12px 22px;
  }
 
 
@@ -185,7 +200,7 @@ contact-box{
 
 .h-primary{
     font-size: 3.8rem;
-    padding: 12px;
+    padding: 36px;
     
 }
 .h-secondry{
